--- a/strapi/package.json
+++ b/strapi/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-upload-cloudinary": "^4.15.5",
     "@strapi/strapi": "4.15.5",
     "better-sqlite3": "8.6.0",
+    "develop": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
