--- a/satsukai.frontend/package.json
+++ b/satsukai.frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/cors": "^2.8.16",
     "@types/node": "^20",
     "@types/qs": "^6.9.11",
